# distill

./: .coverage  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  MISSION.md  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
.vermas/: project.yaml
.vermas/agents/: engineer.md  reviewer.md  scaffolder.md  structure-verifier.md  verifier.md
.vermas/prompts/: mission-planning.md  task-decomposition.md
.vermas/scripts/: pre-signal-check.sh
.vermas/squads/: session-insights-scaffold.yaml  session-insights.yaml
.vermas/workflows/: session-insights-bootstrap-v2.yaml  session-insights-bootstrap.yaml.rolled-back  session-insights-dev.yaml  session-insights-dev.yaml.rolled-back  session-insights-foundation.yaml.rolled-back  session-insights-scaffold.yaml  session-insights-scaffold.yaml.rolled-back
docker/postiz/: Caddyfile  docker-compose.yml
docs/: cli-diagnostic.md
insights/: index.md
insights/daily/: daily-2024-01-15.md  daily-2025-11-11.md  daily-2025-12-01.md  daily-2026-01-07.md  daily-2026-01-08.md  daily-2026-01-09.md  daily-2026-01-10.md  daily-2026-01-11.md  daily-2026-01-12.md  daily-2026-01-13.md  daily-2026-01-14.md  daily-2026-01-15.md  daily-2026-01-16.md  daily-2026-01-17.md  daily-2026-01-18.md  daily-2026-01-19.md  daily-2026-01-20.md  daily-2026-01-21.md  daily-2026-01-22.md  daily-2026-01-23.md  daily-2026-01-24.md  daily-2026-01-25.md  daily-2026-01-26.md  daily-2026-01-27.md  daily-2026-01-28.md  daily-2026-01-29.md  daily-2026-01-30.md  daily-2026-01-31.md  daily-2026-02-01.md  daily-2026-02-03.md  daily-2026-02-04.md  daily-2026-02-05.md  daily-2026-02-06.md
insights/projects/: project-(unknown).md  project-home-project.md  project-test.md
insights/sessions/: codex-2026-02-05-2239-rollout-.md  codex-2026-02-05-2240-rollout-.md  codex-2026-02-05-2241-rollout-.md  codex-2026-02-05-2242-rollout-.md  codex-2026-02-05-2245-rollout-.md  codex-2026-02-06-0026-rollout-.md  codex-2026-02-06-0027-rollout-.md  codex-2026-02-06-0158-rollout-.md  codex-2026-02-06-0217-rollout-.md  codex-2026-02-06-0223-rollout-.md  codex-2026-02-06-0319-rollout-.md  codex-2026-02-06-0325-rollout-.md  codex-2026-02-06-0327-rollout-.md  codex-2026-02-06-0328-rollout-.md  codex-2026-02-06-0329-rollout-.md  codex-2026-02-06-0331-rollout-.md  codex-2026-02-06-0338-rollout-.md  codex-2026-02-06-0342-rollout-.md  codex-2026-02-06-0343-rollout-.md  codex-2026-02-06-0440-rollout-.md  codex-2026-02-06-0442-rollout-.md  codex-2026-02-06-1055-rollout-.md  codex-2026-02-06-1104-rollout-.md  codex-2026-02-06-1113-rollout-.md  codex-2026-02-06-1115-rollout-.md  codex-2026-02-06-1144-rollout-.md  codex-2026-02-06-1145-rollout-.md  codex-2026-02-06-1147-rollout-.md  codex-2026-02-06-1149-rollout-.md  codex-2026-02-06-1151-rollout-.md  codex-2026-02-06-1205-rollout-.md  codex-2026-02-06-1207-rollout-.md  codex-2026-02-06-1209-rollout-.md  codex-2026-02-06-1210-rollout-.md  codex-2026-02-06-1211-rollout-.md  codex-2026-02-06-1212-rollout-.md  codex-2026-02-06-1213-rollout-.md  codex-2026-02-06-1214-rollout-.md  session-2024-01-15-1000-session.md  session-2025-11-11-2202-9704660a.md  (+9472 more)
insights/weekly/: weekly-2024-W03.md  weekly-2026-W06.md
scripts/: preview_social.py  setup.sh
src/: __init__.py  __main__.py  cli.py  config.py  core.py  editorial.py  embeddings.py  errors.py  memory.py  narrative.py  notifications.py  retrieval.py  store.py  trends.py
src/analyzers/: __init__.py  pattern.py
src/blog/: __init__.py  blog_memory.py  config.py  context.py  diagrams.py  formatter.py  prompts.py  reader.py  reading_list.py  state.py  synthesizer.py  themes.py
src/formatters/: __init__.py  obsidian.py  project.py  templates.py  weekly.py
src/intake/: archive.py  clustering.py  config.py  context.py  fulltext.py  intelligence.py  models.py  prompts.py  seeds.py  state.py  synthesizer.py  tagging.py
src/integrations/: __init__.py  mapping.py  postiz.py  scheduling.py
src/journal/: __init__.py  cache.py  config.py  context.py  formatter.py  memory.py  prompts.py  synthesizer.py
src/measurers/: __init__.py  base.py  cli_runs_clean.py  narrative_quality.py  note_content_richness.py  project_detection.py  project_notes.py  tests_pass.py  vermas_task_visibility.py  weekly_digests.py
src/models/: __init__.py  insight.py
tests/: test_atomic_write.py  test_cli.py  test_cli_bare.py  test_config_projects.py  test_distill_config.py  test_editorial.py  test_embeddings.py  test_errors.py  test_memory.py  test_memory_enhanced.py  test_narrative.py  test_narrative_quality.py  test_notifications.py  test_postiz.py  test_postiz_publishers.py  test_retrieval.py  test_run_cmd.py  test_scheduling.py  test_store.py  test_store_pgvector.py  test_trends.py
web/: vite.config.ts
(+381 files in other folders)
