[project]
name = "distill"
version = "0.1.0"
description = "Distill raw AI coding sessions into journals, blogs, and multi-platform publications"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
]

[project.scripts]
distill = "distill.cli:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "distill",
    "distill.analyzers",
    "distill.blog",
    "distill.formatters",
    "distill.journal",
    "distill.measurers",
    "distill.models",
    "distill.parsers",
]

[tool.setuptools.package-dir]
distill = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=distill --cov-report=term-missing"

[tool.coverage.run]
omit = [
    "src/cli.py",
    "src/__main__.py",
]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
